applications/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-route
  namespace: open-webui
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: cloudflare-gateway
  hostnames:
    - owi.yeebs.dev
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
